# pyi-pkg-demo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
pyi_pkg_demo/: __main__.py
